# cloudpan-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_cloudpan_bridge.bat  start_cloudpan_bridge.ps1
.github/workflows/: build.yml
docs/: 02-cloudpan-bridge-master-plan.md  03-cloudpan-bridge-next-stage-plan.md  07-cloudpan-bridge-frontend-ux-plan.md  cloudpan-bridge-mainstream-plan.md  cloudpan-bridge-master-plan.md  cloudpan-bridge-merged-plan.md  cloudpan-bridge-research-plan.md  cloudpan-bridge-todo.md
src/cloudpan_bridge/: auth_capture.py  cli.py  config.py  fast_upload_decision.py  guangya.py  guangya_direct.py  logs.py  models.py  openlist.py  openlist_admin.py  openlist_runtime.py  provider_capture.py  provider_registry.py  source_adapter.py  source_bridge_executor.py  source_bridge_registry.py  source_enrich.py  source_enrich_bridge.py  source_enrich_rules.py  syncer.py  target_adapter.py  task_runtime.py  transfer_planner.py  web_runtime_utils.py  webapp.py
src/cloudpan_bridge/provider_registry_data/: __init__.py  guides.py  source_profiles.py  target_profiles.py
src/cloudpan_bridge/web/: index.html
src/cloudpan_bridge/web/assets/: app.bridgeview.js  app.capability.js  app.css  app.data.js  app.drivercapture.js  app.js  app.pending.js  app.registry.js  app.runtimeview.js  app.sourceops.js  app.status.js  app.workflow.js
tests/: test_sync_logic.py  ui_polish_smoke.js  ui_remote_smoke.js
