[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudpan-bridge"
version = "0.1.0"
description = "CloudPan Bridge: 基于 OpenList 的多源网盘到光鸭云盘桥接控制台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-storage-blob>=12.26.0",
  "boto3>=1.39.0",
  "fastapi>=0.115.0",
  "guangyaclient>=0.0.2",
  "paramiko>=3.5.0",
  "playwright>=1.55.0",
  "smbprotocol>=1.15.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cloudpan-bridge = "cloudpan_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
